--- a/packages/widget_kit/pubspec.yaml
+++ b/packages/widget_kit/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   google_fonts: ^2.1.0
   intl: ^0.17.0
   rxdart: ^0.27.1
-  flare_flutter: ^3.0.2
   utils_kit:
     # path: ../utils_kit
     git:
@@ -32,9 +31,8 @@ dev_dependencies:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
